# android-gradle-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  analyzer_config.example.json  analyzer_config.json  analyzer_utils.py  external_callers.py  gradle_analyzer.py  gradle_impact.py  gradle_sanity.py  menu.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: release.yml
examples/: github-actions-dependency-health.yml
impact/: core-impact-report.txt  core-impact.mmd  core-impact.puml
menu/: __init__.py  actions.py  branding.py  exporter.py  prompts.py  state.py  ui.py
scripts/: bump_version.py  extract_changelog.py
tests/: conftest.py  test_analyzer_utils.py  test_external_callers.py  test_gradle_analyzer.py  test_gradle_impact.py  test_gradle_sanity.py  test_project_config.py
tests/fixtures/accessors/: settings.gradle.kts
tests/fixtures/accessors/app/: build.gradle.kts
tests/fixtures/accessors/legacy/plain-lib/: build.gradle.kts
tests/fixtures/ambiguous/payments/: build.gradle
tests/fixtures/ambiguous/quick-payments/: build.gradle
tests/fixtures/commented_version/module/: build.gradle
tests/fixtures/cycle/a/: build.gradle
tests/fixtures/cycle/b/: build.gradle
tests/fixtures/external_ambiguous/: settings.gradle.kts
tests/fixtures/external_ambiguous/caller/: build.gradle.kts
tests/fixtures/external_ambiguous/caller-using-accessor/: build.gradle.kts
tests/fixtures/groovy_multiline/app/: build.gradle
tests/fixtures/kts_commented/app/: build.gradle.kts
tests/fixtures/kts_multiline/app/: build.gradle.kts
tests/fixtures/orphan/connected/: build.gradle
tests/fixtures/simple/app/: build.gradle
tests/fixtures/with_analyzer_yml/: analyzer.yml
tests/fixtures/with_settings/: settings.gradle.kts
tests/fixtures/with_settings_no_colon/: settings.gradle
