[project]
name = "android-gradle-analyzer"
version = "0.1.0"
description = "Analiza dependencias y mide la sanidad de proyectos Android multi-módulo."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "pfranccino", email = "paul.ayala023@gmail.com" }]
keywords = ["android", "gradle", "dependencies", "plantuml", "mermaid", "architecture"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "questionary>=2.0",
  "rich>=13.7",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]
tui = ["textual>=0.50"]

[project.scripts]
gradle-analyzer      = "gradle_analyzer:main"
gradle-externals     = "external_callers:main"
gradle-sanity        = "gradle_sanity:main"
gradle-analyzer-menu = "menu:main"

[project.urls]
Homepage = "https://github.com/pfranccino/android-gradle-analyzer"
Issues   = "https://github.com/pfranccino/android-gradle-analyzer/issues"
Author   = "https://pfranccino.dev"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Sin 'packages': hatchling incluye todo lo de 'include' en la raíz del wheel
# → todos los .py quedan en site-packages/ y son importables directamente
include = [
  "menu/",
  "analyzer_utils.py",
  "gradle_analyzer.py",
  "external_callers.py",
  "gradle_sanity.py",
  "menu.py",
  "analyzer_config.example.json",
]
