[project]
name = "android-gradle-analyzer"
version = "1.0.9"
description = "Analiza dependencias y mide la sanidad de proyectos Android multi-módulo."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "pfranccino", email = "paul.ayala023@gmail.com" }]
keywords = ["android", "gradle", "dependencies", "plantuml", "mermaid", "architecture"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "questionary>=2.0",
  "rich>=13.7",
]

[project.optional-dependencies]
pdf  = ["weasyprint>=60"]
tui  = ["textual>=0.50"]
yaml = ["pyyaml>=6.0"]

[project.scripts]
gradle-analyzer      = "gradle_analyzer:main"
gradle-externals     = "external_callers:main"
gradle-sanity        = "gradle_sanity:main"
gradle-analyzer-menu = "menu:main"
gradle-impact        = "gradle_impact:main"
gradle-dot           = "gradle_analyzer:main_dot"
gradle-ascii         = "gradle_analyzer:main_ascii"

[project.urls]
Homepage = "https://github.com/pfranccino/android-gradle-analyzer"
Issues   = "https://github.com/pfranccino/android-gradle-analyzer/issues"
Author   = "https://pfranccino.dev"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Sin 'packages': hatchling incluye todo lo de 'include' en la raíz del wheel
# → todos los .py quedan en site-packages/ y son importables directamente
include = [
  "menu/",
  "analyzer_utils.py",
  "gradle_analyzer.py",
  "external_callers.py",
  "gradle_sanity.py",
  "gradle_impact.py",
  "menu.py",
  "analyzer_config.example.json",
]
